# testresources

./: .gitignore  .travis.yml  NEWS  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  test.yml
doc/: example.py
testresources/: __init__.py
testresources/tests/: TestUtil.py  __init__.py  test_optimising_test_suite.py  test_resource_graph.py  test_resourced_test_case.py  test_test_loader.py  test_test_resource.py
tests/: TestUtil.py  __init__.py  test_optimising_test_suite.py  test_resource_graph.py  test_resourced_test_case.py  test_test_loader.py  test_test_resource.py
