[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "testresources"
description = "Testresources, a pyunit extension for managing expensive test resources"
readme = "README.rst"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
authors = [{name = "Robert Collins", email = "robertc@robertcollins.net"}]
license = {text = "Apache-2.0 or BSD"}
requires-python = ">=3.10"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/testing-cabal/testresources"
"Bug Tracker" = "https://github.com/testing-cabal/testresources/issues"
"Source Code" = "https://github.com/testing-cabal/testresources"

[project.optional-dependencies]
test = [
    "docutils",
    "fixtures",
    "testtools",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "testresources/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "testresources*",
    "doc*",
    "Apache-2.0",
    "BSD",
    "COPYING",
    "GOALS",
    "Makefile",
    "NEWS",
    "TODO",
    "tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["testresources"]

[tool.ruff]
exclude = ["testresources/_version.py"]

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "UP"]

[tool.ruff.lint.per-file-ignores]
"testresources/tests/*" = ["S"]
